fixed spacing

--- a/home.css
+++ b/home.css
@@ -6,3 +6,7 @@ h1#title {
 div#control {
   text-align: center;
 }
+
+div#globals {
+  text-align: center;
+}
